Fixed up alignment of the login box
+ updated comment for gulp

--- a/govcms-theme/src/styles/styles.css
+++ b/govcms-theme/src/styles/styles.css
@@ -2653,3 +2653,14 @@ body.node-type-dashboard #about {
     transform: translateY(-145px);
   }
 }
+body.not-front.not-logged-in.page-user #block-system-main .content {
+  margin: auto;
+  margin-bottom: 2em;
+  max-width: 50%;
+}
+
+@media (min-width: 768px) {
+  body.not-front.not-logged-in.page-user #block-system-main .content {
+    max-width: 1100px;
+  }
+}
